1.水晶装备的基础逻辑
